// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileInput test workflow click the showInput button, show the textarea and submit-button 1`] = `
<article
  className="wonder-file-input"
>
  <button
    onClick={[Function]}
  >
    showInput
  </button>
  <textarea
    className="input-component file-input"
    onChange={[Function]}
    type="text"
    value=""
  />
  <button
    onClick={[Function]}
  >
    submit
  </button>
</article>
`;

exports[`FileInput test workflow key in text 1`] = `
<article
  className="wonder-file-input"
>
  <button
    onClick={[Function]}
  >
    showInput
  </button>
  <textarea
    className="input-component file-input"
    onChange={[Function]}
    type="text"
    value="you can input value in textarea"
  />
  <button
    onClick={[Function]}
  >
    submit
  </button>
</article>
`;

exports[`FileInput test workflow set showInput button text 1`] = `
<article
  className="wonder-file-input"
>
  <button
    onClick={[Function]}
  >
    showInput
  </button>
</article>
`;
